@@ -21,3 +21,4 @@ Magnus Henoch     mange at freemail hu
 Johannes Weiner   
 Luca Capello      luca at pca it
 Luigi Panzeri
+James Wright      james at chumsley org
